# oriole

./: .gitignore  AI_ASSISTANCE.md  README.md  pyproject.toml  run_oriole.py
docs/: derivation.aux  derivation.tex
src/oriole/: __init__.py  check.py  cli.py  error.py  phenet.py  report.py
tests/: conftest.py  test_convert_ssf.py  test_data_access.py  test_gls_outputs.py  test_gwas_ssf.py  test_min_trait_coverage.py  test_multi_endophenotypes.py  test_outliers.py  test_regression_baseline.py  test_regression_multi_e.py  test_regression_trait_edges.py  test_scatter_compare.py  test_smoke.py  test_sorted_streaming.py  test_train_classify.py  test_training_missing_traits.py  test_trait_edges.py  test_tune_outliers.py  test_variant_locus.py
tests/data/: aligned_adipo_1000.tsv  aligned_bfp_1000.tsv  aligned_bmi_1000.tsv  aligned_fi_1000.tsv  aligned_homair_1000.tsv  aligned_isiadj_1000.tsv  aligned_tgtohdl_1000.tsv  aligned_vattogfat_1000.tsv  aligned_whradj_1000.tsv  multi_e_config_classify.toml  multi_e_config_train.toml  multi_e_params.json  outliers_config_classify.toml  outliers_config_train.toml  outliers_trait_edges_config_train.toml  sample_1000_ids.txt  sample_classify.tsv  sample_config_classify.toml  sample_config_train.toml  sample_params.json  ssf_config_classify.toml  ssf_params.json  ssf_trait1.tsv  trait_edges_config_classify.toml  trait_edges_config_cycle.toml  trait_edges_params.json  trait_edges_trait2.tsv  trait_edges_trait3.tsv
tests/regression/: README.md  classify_out.tsv  config_classify.toml  config_train.toml  params_out.json
(+60 files in other folders)
